infra/live/dev/k8s-apps/template.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: littlelink-server
  namespace: littlelink-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: littlelink-server      
  template:
    metadata:
      labels:
        app: littlelink-server
    spec:
      containers:
      - name: littlelink-server
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3000
            name: http
        image: ghcr.io/techno-tim/littlelink-server:latest # TODO use SHA
