infra/live/dev/k8s-apps/argocd-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure
  tls:
    secretName: sergsoares-com
    domains:
    - main: sergsoares.com 
  routes:
    - kind: Rule
      match: Host(`argocd.sergsoares.com`)
      services:
        - name: argocd-server
          port: 80
