infra/live/dev/k8s-apps/sergsoares.yml
apiVersion: v1
kind: Namespace
metadata:
  name: littlelink-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: littlelink-server
  namespace: littlelink-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: littlelink-server      
  template:
    metadata:
      labels:
        app: littlelink-server
    spec:
      containers:
      - name: littlelink-server
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3000
            name: http
        image: ghcr.io/techno-tim/littlelink-server@sha256:0e25c4067ee528d01829b1952b35389df91be304a491448811f367045bf7ab60 # TODO use SHA
---
apiVersion: v1
kind: Service
metadata:
  name: littlelink-server
  namespace: littlelink-server
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: littlelink-server
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: littlelink-server
  namespace: littlelink-server
spec:
  entryPoints:
    - websecure
  tls:
    secretName: sergsoares-com
    domains:
    - main: sergsoares.com 
  routes:
    - kind: Rule
      match: Host(`sergsoares.com`)
      services:
        - name: littlelink-server
          port: 3000
